

  Changed REQEV & EVANS to only use eventIdentity
  