@@ -1,4 +1,9 @@
 
 
   Changed REQEV & EVANS to only use eventIdentity
+  REVAL/NEVAL use node number and event index, so not changed
+  Changed EVLRN to only use eventIdentity
+
+  todo:
   
+  EVLRNI
